--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <main class="hero-section">
     <div class="container grid-container">
         <div class="hero-txt-content">
-          <p>Explore out sticker colection</p>
+          <p class="title-txt-hero">Explore our stickers colection</p>
           <h2 class="hero-heading">Sticking ideas where creativity meets adhesive innovation</h2>
           <p class="hero-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. In delectus dolores corporis aspernatur eaque molestiae numquam fugit dolorem ducimus illum</p>
         </div>
