--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
   <nav class="navbar">
     <div class="container navbar-content">
       <div class="logo">
-        <a href="/">
-          <img src="/public/yourstickers-logo.svg" alt="logosvg" class="logo-img">
+        <a href="/" class="flex">
+          <img src="public/images/christmas-tree.png" alt="img" class="mylogo">
+          <h4 class="logo-txt">YOURSTICKERS</h4>
         </a>
       </div>
      
